; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_is_ws_control_frame.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_is_ws_control_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLAGS_MASK_OP = common dso_local global i8 0, align 1
@WEBSOCKET_OP_CLOSE = common dso_local global i8 0, align 1
@WEBSOCKET_OP_PING = common dso_local global i8 0, align 1
@WEBSOCKET_OP_PONG = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8)* @mg_is_ws_control_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mg_is_ws_control_frame(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %4 = load i8, i8* %2, align 1
  %5 = zext i8 %4 to i32
  %6 = load i8, i8* @FLAGS_MASK_OP, align 1
  %7 = zext i8 %6 to i32
  %8 = and i32 %5, %7
  %9 = trunc i32 %8 to i8
  store i8 %9, i8* %3, align 1
  %10 = load i8, i8* %3, align 1
  %11 = zext i8 %10 to i32
  %12 = load i8, i8* @WEBSOCKET_OP_CLOSE, align 1
  %13 = zext i8 %12 to i32
  %14 = icmp eq i32 %11, %13
  br i1 %14, label %27, label %15

15:                                               ; preds = %1
  %16 = load i8, i8* %3, align 1
  %17 = zext i8 %16 to i32
  %18 = load i8, i8* @WEBSOCKET_OP_PING, align 1
  %19 = zext i8 %18 to i32
  %20 = icmp eq i32 %17, %19
  br i1 %20, label %27, label %21

21:                                               ; preds = %15
  %22 = load i8, i8* %3, align 1
  %23 = zext i8 %22 to i32
  %24 = load i8, i8* @WEBSOCKET_OP_PONG, align 1
  %25 = zext i8 %24 to i32
  %26 = icmp eq i32 %23, %25
  br label %27

27:                                               ; preds = %21, %15, %1
  %28 = phi i1 [ true, %15 ], [ true, %1 ], [ %26, %21 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
